# NodeLite

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  PERF_OPTIMIZATION_PLAN.md  PERF_OPTIMIZATION_RESULTS_PHASE2.md  README.en.md  README.md  SECURITY.md  tarpaulin.toml
nodelite-agent/: Cargo.toml
nodelite-agent/src/: collector.rs  collector_linux.rs  collector_macos.rs  config_io.rs  runtime.rs  session.rs
nodelite-agent/src/collector/: shared.rs
nodelite-agent/src/collector_macos/: identity.rs  metrics.rs  syscall.rs  tests.rs
nodelite-server/: Cargo.toml
nodelite-server/assets/: index.html  node.html
nodelite-server/src/: admission.rs  agent_logs.rs  app_state.rs  audit.rs  auth.rs  background.rs  handlers.rs  history.rs  lib.rs  lib_tests.rs  load_test.rs  registry.rs  sanitize.rs  snapshot.rs  startup.rs  state.rs  string_pool.rs  test_support.rs  ui.rs  web_assets.rs  ws.rs
nodelite-server/src/alerts/: delivery.rs  evaluator.rs  mod.rs  runtime.rs
nodelite-server/src/alerts/delivery/: smtp.rs  webhook.rs
nodelite-server/src/alerts/runtime/: tests.rs
nodelite-server/src/audit/: log.rs  query.rs
nodelite-server/src/handlers/: api.rs  auth_routes.rs  install.rs  metrics_exporter.rs  mod.rs  pages.rs  settings.rs
nodelite-server/src/handlers/auth_routes/: healthz.rs  middleware.rs  two_factor.rs
nodelite-server/src/handlers/metrics_exporter/: tests.rs
nodelite-server/src/handlers/settings/: alerts.rs  config_edit.rs  helpers.rs  mod.rs  query.rs  security.rs  subprocess.rs  types.rs  updates.rs
nodelite-server/src/history/: init.rs  query.rs  writer.rs
nodelite-server/src/history/tests/: init_tests.rs  mod.rs  reader_tests.rs  writer_tests.rs
nodelite-server/src/load_test/: diagnostics.rs  fake_agent.rs  large_scale.rs  mod.rs  probes.rs  scenarios.rs  server.rs
nodelite-server/src/registry/: auth.rs  error.rs  issue.rs  lifecycle.rs  storage.rs  tests.rs  token.rs  validate.rs
nodelite-server/src/registry/storage/: write.rs
nodelite-server/src/registry/tests/: authorize_tests.rs  error_tests.rs  migrate_tests.rs  mod.rs  reload_tests.rs  store_tests.rs  token_tests.rs  validate_tests.rs
nodelite-server/src/state/: overview.rs  registry.rs  sqlite_wal.rs  view_cache.rs
nodelite-server/src/state/tests/: mod.rs  overview_tests.rs  registry_tests.rs  string_pool_tests.rs  view_cache_tests.rs
nodelite-server/src/tests/: mod.rs  route_surface_tests.rs  sanitize_snapshot_tests.rs  support.rs
nodelite-server/src/ws/: browser.rs  handshake.rs  protocol.rs  refresh.rs  session.rs
nodelite-server/tests/integration/: concurrent_nodes.rs  failure_recovery.rs  metrics_collection.rs  mod.rs  server_agent_handshake.rs  settings_routes.rs  shutdown_signal.rs  token_lifecycle.rs
nodelite-server/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml
nodelite-server/web/e2e/: _helpers.ts  auto-logout-24h.spec.ts  language-toggle.spec.ts  theme-toggle.spec.ts
nodelite-server/web/public/assets/: ui-i18n.json
nodelite-server/web/src/: App.spec.ts  App.vue  main.ts
nodelite-server/web/src/api/: client.spec.ts  client.ts  index.spec.ts  index.ts  types.ts
nodelite-server/web/src/api/__fixtures__/: nodes.ts
nodelite-server/web/src/auth/: expiry.spec.ts  expiry.ts
nodelite-server/web/src/components/: AlertOverviewCard.spec.ts  AlertOverviewCard.vue  AppLayout.spec.ts  AppLayout.vue  ChangePasswordCard.spec.ts  ChangePasswordCard.vue  ChartModal.spec.ts  ChartModal.vue  CsvField.spec.ts  CsvField.vue  DeliveryCheckboxes.spec.ts  DeliveryCheckboxes.vue  InspectionCard.spec.ts  InspectionCard.vue  LogPanel.spec.ts  LogPanel.vue  MetricChart.spec.ts  MetricChart.vue  MonitorCharts.spec.ts  MonitorCharts.vue  NodeCard.spec.ts  NodeCard.vue  NodeList.spec.ts  NodeMap.spec.ts  NodeMap.vue  NodeNetworkPanel.spec.ts  NodeNetworkPanel.vue  NodeOverviewMonitor.spec.ts  NodeOverviewMonitor.vue  NodeSettingsPanel.spec.ts  NodeSettingsPanel.vue  OpsCard.spec.ts  OpsCard.vue  OverviewCharts.spec.ts  OverviewCharts.vue  OverviewStats.vue  PreviewCard.vue  ReauthFields.vue  RuleEditorCard.vue  RuleList.vue  (+12 more)
nodelite-server/web/src/composables/: useChart.spec.ts  useChart.ts  useChartHoverGroup.ts  useChartSelection.spec.ts  useChartSelection.ts  useDedupeAsync.spec.ts  useDedupeAsync.ts  useNodeSettingsDraft.spec.ts  useNodeSettingsDraft.ts  usePolling.spec.ts  usePolling.ts  useTheme.spec.ts  useTheme.ts  useWorldGeoJson.spec.ts  useWorldGeoJson.ts
nodelite-server/web/src/i18n/: index.ts  language.spec.ts  language.ts
nodelite-server/web/src/lib/: alertsDraft.spec.ts  alertsDraft.ts  format.spec.ts  format.ts  nodeMeta.spec.ts  nodeMeta.ts  password.spec.ts  password.ts
nodelite-server/web/src/lib/chart/: chartData.spec.ts  chartData.ts  format.spec.ts  format.ts  geometry.spec.ts  geometry.ts  hover.spec.ts  hover.ts  sparkline.spec.ts  sparkline.ts  svgModel.spec.ts  svgModel.ts
nodelite-server/web/src/lib/map/: landMask.spec.ts  landMask.ts  (+2 more)
nodelite-server/web/src/router/: index.ts
nodelite-server/web/src/stores/: alerts.spec.ts  alerts.ts  bootstrap.spec.ts  bootstrap.ts  detailHistory.spec.ts  detailHistory.ts  monitorHistory.spec.ts  monitorHistory.ts  nodeHistory.spec.ts  nodeHistory.ts  nodeLogs.spec.ts  nodeLogs.ts  nodeStatus.spec.ts  nodeStatus.ts  nodes.spec.ts  nodes.ts
nodelite-server/web/src/styles/: theme.css
nodelite-server/web/src/views/: AccountView.spec.ts  AccountView.vue  AlertsView.spec.ts  AlertsView.vue  DashboardView.spec.ts  DashboardView.vue  NodeDetailView.spec.ts  NodeDetailView.vue  SettingsView.spec.ts  SettingsView.vue
nodelite-server/web/src/ws/: client.spec.ts
ximonitor-agent/: Cargo.toml
ximonitor-agent/src/: collector.rs  main.rs
ximonitor-proto/: Cargo.toml
ximonitor-proto/src/: config.rs  lib.rs  message.rs  model.rs
ximonitor-server/: Cargo.toml
ximonitor-server/assets/: index.html  node.html  ui-i18n.json  verify-2fa.html
ximonitor-server/src/: admission.rs  auth.rs  encoding.rs  handlers.rs  history.rs  main.rs  qr.rs  registry.rs  snapshot.rs  state.rs  ui.rs  ws.rs
(+27 files in other folders)
