[package]
name = "nodelite-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base32 = "0.5"
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
ipnet.workspace = true
libc.workspace = true
qrcode.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
subtle.workspace = true
time = "0.3"
tokio.workspace = true
tokio-util.workspace = true
toml_edit.workspace = true
totp-lite = "2.0"
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
nodelite-proto = { path = "../nodelite-proto" }

[dev-dependencies]
proptest = "1.4"
tokio-tungstenite.workspace = true
tower = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
