[package]
name = "nodelite-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base32 = "0.5"
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
getrandom.workspace = true
flate2.workspace = true
hex.workspace = true
hmac = "0.12"
ipnet.workspace = true
libc.workspace = true
maxminddb.workspace = true
qrcode.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
subtle.workspace = true
time = "0.3"
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
totp-lite = "2.0"
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webpki-roots = "1.0"
nodelite-proto = { path = "../nodelite-proto" }
include_dir = "0.7"

[build-dependencies]
which = "6"

[dev-dependencies]
proptest = "1.4"
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
tower = "0.5"

[features]
load_test = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
