[package]
name = "ximonitor-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true
