[package]
name = "ximonitor-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
base32 = "0.5"
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
getrandom.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time = "0.3"
tokio.workspace = true
totp-lite = "2.0"
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
ximonitor-proto = { path = "../ximonitor-proto" }
